--- a/Jiawen_notebook.ipynb
+++ b/Jiawen_notebook.ipynb
@@ -1,23 +1,5 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello world.\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Hello world.\")"
-   ]
-  }
- ],
+ "cells": [],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
