--- a/Jiawen_notebook.ipynb
+++ b/Jiawen_notebook.ipynb
@@ -1,5 +1,16 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as n\n",
+    "\n"
+   ]
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
