--- a/Jiawen_notebook.ipynb
+++ b/Jiawen_notebook.ipynb
@@ -2,12 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as n\n",
-    "\n"
+    "import numpy as n"
    ]
   }
  ],
@@ -27,7 +26,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4
  },
