--- a/class_1.ipynb
+++ b/class_1.ipynb
@@ -6,7 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as n"
+    "import numpy as n\n",
+    "import scipy as n\n",
+    "import matplotlib as m\n",
+    "import pandas as p\n",
+    "import seaborn as s"
    ]
   }
  ],
