--- a/class_1.ipynb
+++ b/class_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,16 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('/Users/jiawenli/Downloads/true.txt')"
+    "df = pd.read_csv('/Users/jiawenli/Desktop/MBAN6110T/Class_1/messy_data.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -45,21 +45,125 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unauthorized</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Income</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Quantity</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>56</td>\n",
+       "      <td>59544.57663</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>D</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>46</td>\n",
+       "      <td>36399.18997</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>32</td>\n",
+       "      <td>57140.63881</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>D</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>60</td>\n",
+       "      <td>69554.91903</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>C</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>25</td>\n",
+       "      <td>53173.80518</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>D</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>61</td>\n",
+       "      <td>37341.55459</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>D</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>55</td>\n",
+       "      <td>35516.63492</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>A</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>31</td>\n",
+       "      <td>53254.05089</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>B</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <td>21</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>B</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104</th>\n",
+       "      <td>60</td>\n",
+       "      <td>69554.91903</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>C</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>105 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Unauthorized]\n",
-       "Index: []"
+       "     Age       Income  Gender Product  Quantity\n",
+       "0     56  59544.57663  Female       D         3\n",
+       "1     46  36399.18997  Female     NaN         1\n",
+       "2     32  57140.63881  Female       D         2\n",
+       "3     60  69554.91903    Male       C         5\n",
+       "4     25  53173.80518  Female       D         2\n",
+       "..   ...          ...     ...     ...       ...\n",
+       "100   61  37341.55459    Male       D         5\n",
+       "101   55  35516.63492  Female       A         3\n",
+       "102   31  53254.05089    Male       B         2\n",
+       "103   21          NaN    Male       B         2\n",
+       "104   60  69554.91903    Male       C         5\n",
+       "\n",
+       "[105 rows x 5 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -94,39 +198,122 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unauthorized</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Income</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Quantity</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>0</td>\n",
+       "      <td>105.000000</td>\n",
+       "      <td>94.000000</td>\n",
+       "      <td>105</td>\n",
+       "      <td>100</td>\n",
+       "      <td>105.00000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>unique</th>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>top</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>D</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>freq</th>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>58</td>\n",
+       "      <td>28</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>42.076190</td>\n",
+       "      <td>52867.862808</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.20000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>15.940813</td>\n",
+       "      <td>29896.579420</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.44382</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>18.000000</td>\n",
+       "      <td>20901.331720</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>31.000000</td>\n",
+       "      <td>37814.315255</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>41.000000</td>\n",
+       "      <td>48760.369705</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>55.000000</td>\n",
+       "      <td>61644.277868</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>120.000000</td>\n",
+       "      <td>300000.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.00000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Unauthorized\n",
-       "count             0\n",
-       "unique            0\n",
-       "top             NaN\n",
-       "freq            NaN"
+       "               Age         Income  Gender Product   Quantity\n",
+       "count   105.000000      94.000000     105     100  105.00000\n",
+       "unique         NaN            NaN       2       4        NaN\n",
+       "top            NaN            NaN  Female       D        NaN\n",
+       "freq           NaN            NaN      58      28        NaN\n",
+       "mean     42.076190   52867.862808     NaN     NaN    3.20000\n",
+       "std      15.940813   29896.579420     NaN     NaN    1.44382\n",
+       "min      18.000000   20901.331720     NaN     NaN    1.00000\n",
+       "25%      31.000000   37814.315255     NaN     NaN    2.00000\n",
+       "50%      41.000000   48760.369705     NaN     NaN    3.00000\n",
+       "75%      55.000000   61644.277868     NaN     NaN    5.00000\n",
+       "max     120.000000  300000.000000     NaN     NaN    5.00000"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
