--- a/Assignments/Assignment_1.ipynb
+++ b/Assignments/Assignment_1.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 521,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 522,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
        "9  Product_34   Region_1   58.88         NaN  2022-01-10"
       ]
      },
-     "execution_count": 522,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 523,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
        "max           NaN       NaN  2636.900000   22.000000         NaN"
       ]
      },
-     "execution_count": 523,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 524,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 525,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 526,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 527,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 527,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 528,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
        "       'Product_9', nan], dtype=object)"
       ]
      },
-     "execution_count": 528,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 529,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
        "50"
       ]
      },
-     "execution_count": 529,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 530,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 530,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 531,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
        "10"
       ]
      },
-     "execution_count": 531,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 532,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 533,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +796,7 @@
        "[1001 rows x 7 columns]"
       ]
      },
-     "execution_count": 533,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 534,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +836,7 @@
        "Name: Product, dtype: object"
       ]
      },
-     "execution_count": 534,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -847,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 535,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +858,7 @@
        "Name: Product, dtype: object"
       ]
      },
-     "execution_count": 535,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 536,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 537,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +911,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 537,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -923,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 538,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1020,7 +1020,7 @@
        "4      4  Product_1  Region_1  125.89        13.0  2022-09-16  2022"
       ]
      },
-     "execution_count": 538,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 539,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1128,7 @@
        "1000   1049  Product_4   Region_7   10.80         8.0  2024-09-26  2024"
       ]
      },
-     "execution_count": 539,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1147,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 540,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1160,7 +1160,7 @@
        "Name: Region, dtype: object"
       ]
      },
-     "execution_count": 540,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 541,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1181,7 +1181,7 @@
        "Name: Region, dtype: object"
       ]
      },
-     "execution_count": 541,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1200,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 542,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1209,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 543,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1225,7 +1225,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 543,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1236,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 544,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1253,7 +1253,7 @@
        "Name: Price, dtype: float64"
       ]
      },
-     "execution_count": 544,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1273,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 545,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1290,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 546,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1307,7 +1307,7 @@
        "Name: Units Sold, dtype: float64"
       ]
      },
-     "execution_count": 546,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1326,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 547,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1343,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 548,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1359,7 +1359,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 548,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1378,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 549,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1410,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 550,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1701,7 +1701,7 @@
        "Product_9        195.0"
       ]
      },
-     "execution_count": 550,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1723,7 +1723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 551,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1732,7 +1732,7 @@
        "1274.0"
       ]
      },
-     "execution_count": 551,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1751,7 +1751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 552,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1797,7 +1797,7 @@
        "Product_4      1274.0"
       ]
      },
-     "execution_count": 552,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1817,7 +1817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 553,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1826,7 +1826,7 @@
        "203.32"
       ]
      },
-     "execution_count": 553,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1846,7 +1846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 554,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1957,7 +1957,7 @@
        "Product_8        235.0"
       ]
      },
-     "execution_count": 554,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1968,7 +1968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 555,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1978,7 +1978,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 555,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1997,7 +1997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 556,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2006,7 +2006,7 @@
        "[3, 4, 8, 10, 15, 17, 19, 23, 24, 38, 40, 42, 43, 49]"
       ]
      },
-     "execution_count": 556,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2037,7 +2037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 557,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2128,7 +2128,7 @@
        "Region_9        945.0"
       ]
      },
-     "execution_count": 557,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2157,7 +2157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 558,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2275,7 +2275,7 @@
        "[1001 rows x 3 columns]"
       ]
      },
-     "execution_count": 558,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2289,14 +2289,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 559,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/zj/_4td97xs5m5_42chzkdpgsch0000gn/T/ipykernel_76539/2495716333.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/zj/_4td97xs5m5_42chzkdpgsch0000gn/T/ipykernel_82737/2495716333.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2431,7 +2431,7 @@
        "[1001 rows x 4 columns]"
       ]
      },
-     "execution_count": 559,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2444,7 +2444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 613,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2735,7 +2735,7 @@
        "Product_9       14978.19"
       ]
      },
-     "execution_count": 613,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2748,7 +2748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 561,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2824,7 +2824,7 @@
        "max    167081.200000"
       ]
      },
-     "execution_count": 561,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2843,7 +2843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 562,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2889,7 +2889,7 @@
        "Product_4      167081.2"
       ]
      },
-     "execution_count": 562,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2908,7 +2908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 614,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2917,14 +2917,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 616,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/zj/_4td97xs5m5_42chzkdpgsch0000gn/T/ipykernel_76539/3463798985.py:1: SettingWithCopyWarning: \n",
+      "/var/folders/zj/_4td97xs5m5_42chzkdpgsch0000gn/T/ipykernel_82737/3463798985.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2939,7 +2939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 620,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2994,7 +2994,7 @@
        "2  2024     280696.18"
       ]
      },
-     "execution_count": 620,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3006,7 +3006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 631,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -3062,7 +3062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 563,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -4082,7 +4082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 564,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -4273,7 +4273,7 @@
        "[1001 rows x 8 columns]"
       ]
      },
-     "execution_count": 564,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4287,7 +4287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 565,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -4397,7 +4397,7 @@
        "4          09  "
       ]
      },
-     "execution_count": 565,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4409,7 +4409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 566,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4427,7 +4427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 567,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -4602,7 +4602,7 @@
        "9      Spring  "
       ]
      },
-     "execution_count": 567,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4621,7 +4621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 568,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -4682,7 +4682,7 @@
        "3      Winter      2447.0"
       ]
      },
-     "execution_count": 568,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4704,7 +4704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 592,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -4822,7 +4822,7 @@
        "[150 rows x 3 columns]"
       ]
      },
-     "execution_count": 592,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4836,7 +4836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 593,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -4845,7 +4845,7 @@
        "10166.0"
       ]
      },
-     "execution_count": 593,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4856,7 +4856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 594,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -4869,7 +4869,7 @@
        "Name: Units Sold, dtype: float64"
       ]
      },
-     "execution_count": 594,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4881,7 +4881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 599,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -4926,7 +4926,7 @@
        "33  2022  Product_4       564.0"
       ]
      },
-     "execution_count": 599,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4937,7 +4937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 600,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -4982,7 +4982,7 @@
        "83  2023  Product_4       482.0"
       ]
      },
-     "execution_count": 600,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4993,7 +4993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 601,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -5038,7 +5038,7 @@
        "133  2024  Product_4       228.0"
       ]
      },
-     "execution_count": 601,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5049,16 +5049,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 611,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x167274f70>"
+       "<matplotlib.legend.Legend at 0x1465d8070>"
       ]
      },
-     "execution_count": 611,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     },
