In_Class5_exercise_PCA_Feature_engineering

--- a/Assignments/MBAN 6110 Assignment_2.ipynb
+++ b/Assignments/MBAN 6110 Assignment_2.ipynb
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
        "Location3   22.787691  0.108708"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
        "Device3   22.612276  0.107993"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1095,7 @@
        "[330 rows x 6 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1107,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1116,7 @@
        "0.12026949300288214"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1143,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1297,7 +1297,7 @@
        "[330 rows x 6 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1309,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1318,7 +1318,7 @@
        "0.1089330399532712"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1378,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1387,7 +1387,7 @@
        "24.805547386576052"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1414,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1423,7 +1423,7 @@
        "23.343782979234575"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1466,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1483,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1511,12 +1511,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Perform t-test between control group and Variant A\n",
-    "t_stats_a, p_value_a = stats.ttest_ind(control_group, variant_A)"
+    "t_stats_a, p_value_a = stats.ttest_ind(variant_A, control_group)"
    ]
   },
   {
@@ -1533,12 +1533,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Perform t-test between control group and Variant B\n",
-    "t_stats_b, p_value_b = stats.ttest_ind(control_group, variant_B)"
+    "t_stats_b, p_value_b = stats.ttest_ind(variant_B, control_group)"
    ]
   },
   {
@@ -1551,22 +1551,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T-statistics: -13.8294\n",
-      "p-value: 0.0000\n"
+      "T-statistics: 13.8294\n",
+      "p-value: 0.000000\n"
      ]
     }
    ],
    "source": [
     "# Print the t-statistic and p-value for each comparison\n",
     "print(\"T-statistics: {:.4f}\".format(t_stats_a))\n",
-    "print(\"p-value: {:.4f}\".format(p_value_a))"
+    "print(\"p-value: {:.6f}\".format(p_value_a))"
    ]
   },
   {
@@ -1579,21 +1579,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T-statistics: -6.4718\n",
-      "p-value: 0.0000\n"
+      "T-statistics: 6.4718\n",
+      "p-value: 0.000000\n"
      ]
     }
    ],
    "source": [
     "print(\"T-statistics: {:.4f}\".format(t_stats_b))\n",
-    "print(\"p-value: {:.4f}\".format(p_value_b))"
+    "print(\"p-value: {:.6f}\".format(p_value_b))"
    ]
   },
   {
@@ -1621,7 +1621,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Perform ANOVA test\n",
+    "##### Perform ANOVA test on CTR\n",
     "\n",
     "Null hypothesis: There is no significant difference among the groups.\n",
     "\n",
@@ -1630,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1647,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1656,14 +1656,14 @@
      "text": [
       "ANOVA test:\n",
       "F-statistic: 93.5889\n",
-      "p-value: 0.0000\n"
+      "p-value: 0.000000\n"
      ]
     }
    ],
    "source": [
     "print(\"ANOVA test:\")\n",
     "print(\"F-statistic: {:.4f}\".format(F_stats))\n",
-    "print(\"p-value: {:.4f}\".format(p_value))"
+    "print(\"p-value: {:.6f}\".format(p_value))"
    ]
   },
   {
@@ -1698,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1714,7 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1735,7 +1735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1763,7 +1763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1793,12 +1793,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Perform ANOVA test on Average Time Spent\n",
+    "\n",
+    "Null hypothesis: There is no significant difference among the groups.\n",
+    "\n",
+    "Alternative hypothesis: There exists significant differences among the groups."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ANOVA test:\n",
+      "F-statistic: 75.6084\n",
+      "p-value: 0.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "F_stats, p_value = stats.f_oneway(control_group_time, variant_A_time, variant_B_time)\n",
+    "print(\"ANOVA test:\")\n",
+    "print(\"F-statistic: {:.4f}\".format(F_stats))\n",
+    "print(\"p-value: {:.6f}\".format(p_value))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The resulting F-statistic with a value of 75.6084 measures the variability between groups as well as the ratio of variability within each group. The higher F-statistic indicates that there is a large variation between the groups.\n",
+    "\n",
+    "Therefore, we reject the null hypothesis in favor of the alternative hypothesis. That is, there is a significant difference among the control groups and variant features."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### 2.3 Let's figure out which variant is better by the mean"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1859,7 +1903,7 @@
        "Variant B   23.343783  0.108933"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
