--- a/Pandas_demo_CSV.ipynb
+++ b/Pandas_demo_CSV.ipynb
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>customer_id</th>\n",
-       "      <th>cust_name</th>\n",
+       "      <th>customer_name</th>\n",
        "      <th>num_products</th>\n",
        "      <th>province</th>\n",
        "      <th>len_relationship</th>\n",
@@ -389,7 +389,7 @@
        "</div>"
       ],
       "text/plain": [
-       "    customer_id           cust_name  num_products province  len_relationship  \\\n",
+       "    customer_id       customer_name  num_products province  len_relationship  \\\n",
        "0          1001      Johnny Awesome             3       ON                 1   \n",
        "1          1002          Bob Marley             4       ON                 1   \n",
        "2          1004        Taylor Swift             2       AB                 2   \n",
@@ -420,13 +420,14 @@
        "12  personal_banking  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df2=df2.rename(columns={'id':'customer_id'})\n",
+    "df2 = df2.rename(columns={'cust_name':'customer_name'})\n",
     "df2"
    ]
   },
@@ -440,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +482,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>cust_name</th>\n",
+       "      <th>customer_name</th>\n",
        "      <th>num_products</th>\n",
        "      <th>province</th>\n",
        "      <th>len_relationship</th>\n",
@@ -582,7 +583,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                      cust_name  num_products province  len_relationship  \\\n",
+       "                  customer_name  num_products province  len_relationship  \\\n",
        "customer_id                                                                \n",
        "1001             Johnny Awesome             3       ON                 1   \n",
        "1002                 Bob Marley             4       ON                 1   \n",
@@ -609,7 +610,7 @@
        "1005         personal_banking  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +645,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>cust_name</th>\n",
+       "      <th>customer_name</th>\n",
        "      <th>num_products</th>\n",
        "      <th>province</th>\n",
        "      <th>len_relationship</th>\n",
@@ -705,7 +706,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                      cust_name  num_products province  len_relationship  \\\n",
+       "                  customer_name  num_products province  len_relationship  \\\n",
        "customer_id                                                                \n",
        "1354               Jessica Fast             4       BC                 5   \n",
        "1005         Mariah Anita Smith             2       BC                 3   \n",
@@ -722,7 +723,7 @@
        "1475         personal_banking  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +754,7 @@
       "Data columns (total 5 columns):\n",
       " #   Column            Non-Null Count  Dtype \n",
       "---  ------            --------------  ----- \n",
-      " 0   cust_name         13 non-null     object\n",
+      " 0   customer_name     13 non-null     object\n",
       " 1   num_products      13 non-null     int64 \n",
       " 2   province          13 non-null     object\n",
       " 3   len_relationship  13 non-null     int64 \n",
