--- a/Assignments/Assignment_1.ipynb
+++ b/Assignments/Assignment_1.ipynb
@@ -2296,7 +2296,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/zj/_4td97xs5m5_42chzkdpgsch0000gn/T/ipykernel_82737/2495716333.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/zj/_4td97xs5m5_42chzkdpgsch0000gn/T/ipykernel_55316/2495716333.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2924,7 +2924,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/zj/_4td97xs5m5_42chzkdpgsch0000gn/T/ipykernel_82737/3463798985.py:1: SettingWithCopyWarning: \n",
+      "/var/folders/zj/_4td97xs5m5_42chzkdpgsch0000gn/T/ipykernel_55316/3463798985.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -5055,7 +5055,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1465d8070>"
+       "<matplotlib.legend.Legend at 0x13b64c0a0>"
       ]
      },
      "execution_count": 59,
