Final_Project_Model

--- a/Project/Final_Project_modeling.ipynb
+++ b/Project/Final_Project_modeling.ipynb
@@ -1581,7 +1581,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### We will implement the following three models:\n",
+    "##### We will implement the following models:\n",
     "\n",
     "1. Logistic Regression: Logistic regression is a commonly used binary classification algorithm. It can predict the probability of an event by using a logistic function\n",
     "\n",
@@ -1589,7 +1589,11 @@
     "\n",
     "3. Support Vector Machines (SVMs): SVMs are an effective binary classification algorithm that is particularly suited to small to medium sized complex datasets, and therefore well suited to our dataset.\n",
     "\n",
-    "4. K Nearest Neighbor: "
+    "4. K-Nearest Neighbors (KNN): Uses the similarity of bookings to predict whether they will be canceled.\n",
+    "\n",
+    "5. Random Forest: Evaluates whether a reservation is likely to be canceled by combining predictions from multiple decision trees.\n",
+    "\n",
+    "6. Gradient Boosting: Iteratively corrects prediction errors to incrementally improve the accuracy of predicting hotel booking cancellations."
    ]
   },
   {
